# edurtos

./: CMakeLists.txt  README.md  build_and_record.bat
examples/: main.cpp  test_tasks_main.cpp
include/drivers/: virtual_hardware.hpp
include/kernel/: kernel.hpp  scheduler.hpp  task.hpp
include/util/: console_dashboard.hpp  console_logger.hpp  console_visualizer.hpp  fault_injector.hpp  scheduler_logger.hpp  test_tasks.hpp
output/: deadline_tracking_log.txt  fault_injection_log.txt  scheduler_log.csv  task_execution_log.txt
src/drivers/: virtual_hardware.cpp
src/kernel/: kernel.cpp  scheduler.cpp  task.cpp
src/util/: console_dashboard.cpp  console_logger.cpp  console_visualizer.cpp  fault_injector.cpp  scheduler_logger.cpp  test_tasks.cpp
